# r_disco

./: CMakeLists.txt  GSTREAMERConfig.cmake  README.md  r_build.txt
.github/workflows/: cmake-single-platform.yml
cmake/: r_discoConfig.cmake.in
source/providers/: r_onvif_provider.cpp
ut/: CMakeLists.txt
